--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,6 +6,7 @@ COPY go.mod go.sum ./
 RUN go mod download
 
 COPY . .
+COPY ../algorithm ./algorithm
 
 RUN CGO_ENABLED=0 GOOS=linux go build -o main ./cmd/api
 
